2004-04-15 Scott Dattalo <scott@dattalo.com>
	* src/14bit-tmrs.cc, src/ioports.cc, src/ioports.h: PORTC's T1OSC input
	can clock TMR1 on some PIC's. I've added some preliminary support for this.

2004-04-14 Scott Dattalo <scott@dattalo.com>
	* gui/gui_break.cc, gui/gui_menu.cc, gui/gui_profile.cc,
	gui/gui_src_asm.cc, gui/gui_src_opcode.cc, gui/gui_stack.cc,
	src/16bit-registers.cc, src/breakpoints.cc,
	src/cod.cc, src/eeprom.cc, src/ioports.cc, src/ioports.h, 
	src/pic-processor.cc, src/processor.cc, src/processor.h,
	src/trace.cc:
	Made the processor's ProgramMemoryAccess class dynamically allocated.
	* src/Makefile.am: ssp.h was not part of the install.

2004-04-14 Scott Dattalo <scott@dattalo.com>
	* src/14bit-tmrs.cc: The TMR2 peripheral failed to properly clear
	its breakpoint whenever it was being turned off.
	*src/modules.h: string.h was not getting included.
	
2004-04-13 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc, src/breakpoints.h: 
	Redesigned breakpoints so that a) they're more object oriented and b) more
	easily extensible.
	* src/interface.cc, src/gpsim_interface.h: Removed the CyclicBreakPoint class
	and moved the functionality it was providing into the gpsimInterface class
	* src/14bit-registers.h, src/14bit-tmrs.h, modules/usart.cc, cli/cmd_set.cc,
	src/eeprom.h, src/gpsim_time.cc, src/gpsim_time.h, 
	src/p16x7x.h, src/pic-processor.cc, src/processor.cc,
	src/processor.h, src/ssp.h, src/stimuli.cc, src/stimuli.h, src/tmr0.h,
	src/trace.h, src/uart.h, gui/gui_profile.cc, modules/encoder.h, modules/paraface.h,:
	Removed the BreakCallBack class. The functionality it was providing is now
	implemented by the BreakpointObject class.


2004-04-11  Borut Razem  <borut.razem@siol.net>
	* src/interface.cc: added initialization of interface_seq_number in
	gpsimInterface constructor.

2004-04-07 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.h, src/breakpoints: Adding assertion type breakpoints
	and redesigning the whole Breakpoint class.
	