@@ -80,6 +80,10 @@
 #define VERSION "0.21.2"
 
 /* manually added stuff */
+#define GPSIM_MAJOR_VERSION 0
+#define GPSIM_MINOR_VERSION 21
+#define GPSIM_MICRO_VERSION 2
+
 #ifndef __FUNCTION__
 #define __FUNCTION__  __FILE__
 #endif
